subfilter query row overflow contents hidden to prevent UI clutter obscuring buttons

--- a/client/src/app/forms/types/query-builder/query-filter/query-filter.type.less
+++ b/client/src/app/forms/types/query-builder/query-filter/query-filter.type.less
@@ -1,3 +1,4 @@
+@import 'ng-zorro-antd/style/color/colors.less';
 :host {
   nz-select {
     width: 100%;
@@ -14,7 +15,12 @@
     padding-left: 12px !important;
   }
 }
-
+.anchor-col {
+  position: sticky;
+  left: 0;
+  z-index: 10;
+  background-color: @blue-2;
+}
 .filter-row {
   flex-wrap: nowrap;
 }
