--- a/client/src/app/forms/types/query-builder/query-subfilters/query-subfilters.type.less
+++ b/client/src/app/forms/types/query-builder/query-subfilters/query-subfilters.type.less
@@ -2,6 +2,9 @@
 .filter-add-btn {
   padding-bottom: 8px;
 }
+.subfilter-field {
+  overflow-y: hidden;
+}
 .subfilter-row-root {
   flex-wrap: nowrap;
   background-color: @blue-2;
